fix(style): align captionwhen using icon for search

--- a/src/client/styles/layout/table.scss
+++ b/src/client/styles/layout/table.scss
@@ -29,7 +29,6 @@
 
 	rb-icon {
 		position: relative;
-		top: 3px;
 	}
 }
 
